# pyper_pkg

./: .gitignore  LICENSE  README.md  pyproject.toml
src/pyper/: nodes.py  on_dict.py  on_obj.py  on_seq.py
src/pyper.egg-info/: PKG-INFO  SOURCES.txt
tests/: 1_init_tests.py  initializes.py
