[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyper"
version = "0.1.0"
dependencies = ["pytest"]
authors = [
    {name="Samuel Zetumer", email="szetumer@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools]
packages = ["pyper"]
package-dir = {"" = "src"}

[tool.pytest.ini_options] 
minversion = "6.0"
# addopts = "-rX -n auto"
testpaths = ["./tests"]
pythonpath = ["./src/pyper"]

[tool.mypy]
mypy_path = "./mypy"